--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^5.7.2",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^11.5.0",
