--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-table": "^1.17.1",
-    "draft-js": "^0.11.6",
+    "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "express": "^4.17.1",
@@ -45,6 +45,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.1",
+    "react-snap": "^1.10.0",
+    "react-snapshot": "^1.3.0",
     "redux": "^4.0.5",
     "request": "^2.88.2",
     "video-react": "^0.14.1"
@@ -54,7 +56,25 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "postbuild": "react-snap",
     "lint": "eslint ."
+  },
+  "reactSnap": {
+    "puppeteerArgs": [
+        "--no-sandbox",
+        "--disable-setuid-sandbox"
+    ],
+    "concurrency": 1,
+    "inlineCss": false,
+    "skipThirdPartyRequests": false,
+    "exclude": [
+      "/search",
+      "/login",
+      "/login-password",
+      "/backoffice",
+      "/backoffice/**"
+    ],
+    "snapshotDelay": 300
   },
   "eslintConfig": {
     "extends": "react-app"
