--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
   },
   "reactSnap": {
     "puppeteerArgs": [
@@ -91,6 +91,9 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint-config-airbnb": "^18.1.0"
   },
   "proxy": "http://localhost:5000/"
