--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "sitemap": "babel-node src/sitemap/generator.js",
     "lint": "eslint ."
   },
   "reactSnap": {
@@ -91,10 +92,11 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint-config-airbnb": "^18.1.0"
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.12.13",
+    "@babel/preset-env": "^7.9.6",
+    "eslint-config-airbnb": "^18.1.0",
+    "react-router-sitemap": "^1.2.0"
   },
   "proxy": "http://localhost:5000/"
 }
