--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,6 @@
     "react-i18next": "^11.5.0",
     "react-moment": "^0.9.7",
     "react-player": "^2.5.0",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.1",
     "react-snap": "^1.10.0",
@@ -96,7 +95,11 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.9.6",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "eslint-config-airbnb": "^18.1.0",
+    "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0"
   },
   "proxy": "http://localhost:5000/"
